--- a/DFT_Analysis.ipynb
+++ b/DFT_Analysis.ipynb
@@ -42,53 +42,15 @@
     "\n",
     "rr = C.RunRules(omp_num_threads=omp,mpi=mpi)\n",
     "code = C.QeCalculator(rr)\n",
-    "#code.global_options()"
+    "code.global_options()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7f849d39-dc30-4225-abf0-ef50b8eced86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialize a QuantumESPRESSO calculator with scheduler slurm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'scheduler': 'slurm',\n",
-       " 'nodes': 2,\n",
-       " 'ntasks_per_node': 16,\n",
-       " 'cpus_per_task': 2,\n",
-       " 'omp_num_threads': 2,\n",
-       " 'gpus_per_node': None,\n",
-       " 'memory': '125000',\n",
-       " 'time': '11:59:00',\n",
-       " 'partition': 'all12h',\n",
-       " 'account': None,\n",
-       " 'qos': None,\n",
-       " 'map_by': None,\n",
-       " 'pe': 1,\n",
-       " 'rank_by': None,\n",
-       " 'executable': 'pw.x',\n",
-       " 'skip': True,\n",
-       " 'clean_restart': True,\n",
-       " 'dry_run': False,\n",
-       " 'wait_end_run': True,\n",
-       " 'activate_BeeOND': True,\n",
-       " 'verbose': True}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -111,10 +73,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "61f8944e-574e-4361-a69e-479c12943f5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a QuantumESPRESSO calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 1,\n",
+       " 'ntasks_per_node': 4,\n",
+       " 'cpus_per_task': 32,\n",
+       " 'omp_num_threads': 8,\n",
+       " 'gpus_per_node': 4,\n",
+       " 'memory': '120GB',\n",
+       " 'time': '23:59:00',\n",
+       " 'partition': 'm100_usr_prod',\n",
+       " 'account': 'IscrC_PrExIn',\n",
+       " 'qos': None,\n",
+       " 'map_by': 'socket',\n",
+       " 'pe': 8,\n",
+       " 'rank_by': 'core',\n",
+       " 'executable': 'pw.x',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': False,\n",
+       " 'verbose': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for m100\n",
     "nodes = 1\n",
@@ -127,14 +127,14 @@
     "ntasks = nodes*ntasks_per_node\n",
     "\n",
     "rr = C.RunRules(scheduler='slurm',partition='m100_usr_prod',\n",
-    "                account='IscrC_AlNWS2',\n",
+    "                account='IscrC_PrExIn',\n",
     "                memory='120GB',time='23:59:00',\n",
     "                nodes=nodes,ntasks_per_node=ntasks_per_node,\n",
     "                cpus_per_task=cpus_per_task,omp_num_threads=omp_num_threads,\n",
     "                gpus_per_node=gpus_per_node,pe=pe,\n",
     "                map_by='socket',rank_by='core')\n",
     "code = C.QeCalculator(rr)\n",
-    "#code.global_options()"
+    "code.global_options()"
    ]
   },
   {
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "2d482de1-2847-41af-846b-b3bd71e86147",
    "metadata": {},
    "outputs": [],
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "5872c364-96ad-4047-a87c-f372c8551916",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1781,7 @@
       "text/plain": [
        "{'control': {'calculation': \"'nscf'\",\n",
        "  'verbosity': \"'high'\",\n",
-       "  'prefix': \"'pwscf'\",\n",
+       "  'prefix': \"'gs_converged'\",\n",
        "  'outdir': \"'./'\",\n",
        "  'pseudo_dir': \"'../pseudos'\"},\n",
        " 'system': {'force_symmorphic': '.true.',\n",
@@ -1805,7 +1805,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,17 +1818,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "6158de2a-15db-446f-9a9f-bcdc184a4c70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvalues = [18] #[18,30,42,60,72]"
+    "kvalues = [72] #[18,30,42,60,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "e38422cb-1e04-46cf-b202-2829c55938fa",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "cef5f9a1-ea58-4b33-b719-2fbfca2da5c0",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1866,7 @@
        " 'verbose': True,\n",
        " 'input': {'control': {'calculation': \"'nscf'\",\n",
        "   'verbosity': \"'high'\",\n",
-       "   'prefix': \"'kpoints_18-nbnds_500'\",\n",
+       "   'prefix': \"'kpoints_72-nbnds_500'\",\n",
        "   'outdir': \"'./'\",\n",
        "   'pseudo_dir': \"'../pseudos'\"},\n",
        "  'system': {'force_symmorphic': '.true.',\n",
@@ -1886,13 +1886,13 @@
        "  'atomic_positions': {'type': 'alat',\n",
        "   'values': [['Sn', array([0.        , 0.57735027, 0.09148726])],\n",
        "    ['Sn', array([ 0.5       ,  0.28867513, -0.09148726])]]},\n",
-       "  'kpoints': {'type': 'automatic', 'values': ([18, 18, 1], [0.0, 0.0, 0.0])},\n",
+       "  'kpoints': {'type': 'automatic', 'values': ([72, 72, 1], [0.0, 0.0, 0.0])},\n",
        "  'cell_parameters': {}},\n",
        " 'source_dir': 'DFT_analysis/gs_converged.save',\n",
-       " 'name': 'kpoints_18-nbnds_500'}"
+       " 'name': 'kpoints_72-nbnds_500'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2936d7bf-43ae-4b8d-9cf0-99382f9fe33f",
    "metadata": {},
    "outputs": [
@@ -1914,13 +1914,11 @@
       "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
       "Run the task [0] \n",
-      "copy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_18-nbnds_500.save\n",
-      "run command: mpirun -np 32 pw.x -inp kpoints_18-nbnds_500.in > kpoints_18-nbnds_500.log\n",
-      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_18-nbnds_500.sh\n",
-      "computation kpoints_18-nbnds_500 is running...\n",
-      "computation kpoints_18-nbnds_500 ended\n",
-      "Task [0] ended \n",
-      " \n"
+      "copy source_dir DFT_analysis/gs_converged.save in the /m100_work/IscrC_PrExIn/Stanene/DFT_analysis/kpoints_72-nbnds_500.save\n",
+      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_72-nbnds_500.in > kpoints_72-nbnds_500.log\n",
+      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_72-nbnds_500.sh\n",
+      "computation kpoints_72-nbnds_500 is running...\n",
+      "Submitted batch job 8865695\n"
      ]
     }
    ],
@@ -2018,7 +2016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2032,7 +2030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
