--- a/DFT_Analysis.ipynb
+++ b/DFT_Analysis.ipynb
@@ -47,15 +47,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7f849d39-dc30-4225-abf0-ef50b8eced86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a QuantumESPRESSO calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 1,\n",
+       " 'ntasks_per_node': 16,\n",
+       " 'cpus_per_task': 2,\n",
+       " 'omp_num_threads': 2,\n",
+       " 'gpus_per_node': None,\n",
+       " 'memory': '125000',\n",
+       " 'time': '11:59:00',\n",
+       " 'partition': 'all12h',\n",
+       " 'account': None,\n",
+       " 'qos': None,\n",
+       " 'map_by': None,\n",
+       " 'pe': 1,\n",
+       " 'rank_by': None,\n",
+       " 'executable': 'pw.x',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': True,\n",
+       " 'verbose': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
     "# Many mpi are needed for better performances\n",
-    "nodes = 2\n",
+    "nodes = 1\n",
     "ntasks_per_node = 16\n",
     "cpus_per_task=2\n",
     "omp_num_threads=2\n",
@@ -1758,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2d482de1-2847-41af-846b-b3bd71e86147",
    "metadata": {},
    "outputs": [],
@@ -1772,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "5872c364-96ad-4047-a87c-f372c8551916",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1819,7 @@
       "text/plain": [
        "{'control': {'calculation': \"'nscf'\",\n",
        "  'verbosity': \"'high'\",\n",
-       "  'prefix': \"'gs_converged'\",\n",
+       "  'prefix': \"'pwscf'\",\n",
        "  'outdir': \"'./'\",\n",
        "  'pseudo_dir': \"'../pseudos'\"},\n",
        " 'system': {'force_symmorphic': '.true.',\n",
@@ -1805,7 +1843,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,17 +1856,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6158de2a-15db-446f-9a9f-bcdc184a4c70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvalues = [72] #[18,30,42,60,72]"
+    "kvalues = [30] #[18,30,42,60,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "e38422cb-1e04-46cf-b202-2829c55938fa",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "cef5f9a1-ea58-4b33-b719-2fbfca2da5c0",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1904,7 @@
        " 'verbose': True,\n",
        " 'input': {'control': {'calculation': \"'nscf'\",\n",
        "   'verbosity': \"'high'\",\n",
-       "   'prefix': \"'kpoints_72-nbnds_500'\",\n",
+       "   'prefix': \"'kpoints_30-nbnds_500'\",\n",
        "   'outdir': \"'./'\",\n",
        "   'pseudo_dir': \"'../pseudos'\"},\n",
        "  'system': {'force_symmorphic': '.true.',\n",
@@ -1886,13 +1924,13 @@
        "  'atomic_positions': {'type': 'alat',\n",
        "   'values': [['Sn', array([0.        , 0.57735027, 0.09148726])],\n",
        "    ['Sn', array([ 0.5       ,  0.28867513, -0.09148726])]]},\n",
-       "  'kpoints': {'type': 'automatic', 'values': ([72, 72, 1], [0.0, 0.0, 0.0])},\n",
+       "  'kpoints': {'type': 'automatic', 'values': ([30, 30, 1], [0.0, 0.0, 0.0])},\n",
        "  'cell_parameters': {}},\n",
        " 'source_dir': 'DFT_analysis/gs_converged.save',\n",
-       " 'name': 'kpoints_72-nbnds_500'}"
+       " 'name': 'kpoints_30-nbnds_500'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,11 +1952,10 @@
       "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
       "Run the task [0] \n",
-      "copy source_dir DFT_analysis/gs_converged.save in the /m100_work/IscrC_PrExIn/Stanene/DFT_analysis/kpoints_72-nbnds_500.save\n",
-      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_72-nbnds_500.in > kpoints_72-nbnds_500.log\n",
-      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_72-nbnds_500.sh\n",
-      "computation kpoints_72-nbnds_500 is running...\n",
-      "Submitted batch job 8865695\n"
+      "copy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_30-nbnds_500.save\n",
+      "run command: mpirun -np 16 pw.x -inp kpoints_30-nbnds_500.in > kpoints_30-nbnds_500.log\n",
+      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_30-nbnds_500.sh\n",
+      "computation kpoints_30-nbnds_500 is running...\n"
      ]
     }
    ],
@@ -2016,7 +2053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2030,7 +2067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
