--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -68,9 +68,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a Yambo calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 2,\n",
+       " 'ntasks_per_node': 32,\n",
+       " 'cpus_per_task': 1,\n",
+       " 'omp_num_threads': 1,\n",
+       " 'gpus_per_node': None,\n",
+       " 'memory': '125000',\n",
+       " 'time': None,\n",
+       " 'partition': 'slownodes',\n",
+       " 'account': None,\n",
+       " 'qos': None,\n",
+       " 'map_by': None,\n",
+       " 'pe': 1,\n",
+       " 'rank_by': None,\n",
+       " 'executable': 'yambo',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': True,\n",
+       " 'verbose': True,\n",
+       " 'fatlog': False}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -82,7 +121,7 @@
     "\n",
     "ntasks = nodes*ntasks_per_node\n",
     "\n",
-    "rr = C.RunRules(scheduler='slurm',partition='all12h', #'all12h',\n",
+    "rr = C.RunRules(scheduler='slurm',partition='slownodes', #'all12h',\n",
     "                memory='125000',\n",
     "                nodes=nodes,ntasks_per_node=ntasks_per_node,\n",
     "                cpus_per_task=cpus_per_task,\n",
@@ -2206,28 +2245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kpoints = [18,72]"
+    "kpoints = [30] #[18,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16 2\n",
+      "16 4\n",
       "Initialize a Dataset with 2 parallel tasks\n",
-      "SAVE folder DFT_analysis/kpoints_18-nbnds_500.save/SAVE already present. No operations performed.\n",
-      "SAVE folder already present in GW_analysis/kpoints_18-nbnds_500. No operations performed.\n",
-      "SAVE folder DFT_analysis/kpoints_72-nbnds_500.save/SAVE already present. No operations performed.\n",
-      "SAVE folder already present in GW_analysis/kpoints_72-nbnds_500. No operations performed.\n"
+      "Executing command: cd DFT_analysis/kpoints_30-nbnds_500.save; p2y\n",
+      "Create folder path GW_analysis/kpoints_30-nbnds_500\n",
+      "Create a symlink of DFT_analysis/kpoints_30-nbnds_500.save/SAVE in GW_analysis/kpoints_30-nbnds_500\n",
+      "Build the r_setup in the run_dir path GW_analysis/kpoints_30-nbnds_500\n"
      ]
     }
    ],
@@ -2255,8 +2294,9 @@
     "for k in kpoints:\n",
     "    source_dir = 'DFT_analysis/kpoints_%s-nbnds_500.save'%k\n",
     "    run_dir = 'GW_analysis/kpoints_%s-nbnds_500'%k\n",
-    "    Tools.init_yambo_run_dir(Tools.make_p2y(source_dir,\n",
-    "        p2y_command='mpirun -np 1 p2y'),run_dir=run_dir,yambo_command='mpirun -np 1 yambo')\n",
+    "    Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
+    "    #Tools.init_yambo_run_dir(Tools.make_p2y(source_dir,\n",
+    "    #    p2y_command='mpirun -np 1 p2y'),run_dir=run_dir,yambo_command='mpirun -np 1 yambo')\n",
     "\n",
     "    inp = I.YamboInput(args='mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',folder=run_dir)\n",
     "    inp.set_extendOut()\n",
@@ -2266,12 +2306,12 @@
     "    inp.set_scalar_variables(CUTGeo='slab z')\n",
     "    inp.set_array_variables(RandQpts=Randqpts)\n",
     "    inp.set_array_variables(units='RL',RandGvec=RandGvec,RandGvecW=RandGvecW)\n",
-    "    inp.set_scalar_variables(GTermKind='BG')\n",
+    "    #inp.set_scalar_variables(GTermKind='BG')\n",
     "    inp.set_bandRange(start_band,stop_band)\n",
     "    inp.set_array_variables(units=NGsBlkXp_units,NGsBlkXp=NGsBlkXp)\n",
     "    inp.set_array_variables(BndsRnXp=BndsRnXp,GbndRnge=GbndRnge)\n",
-    "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 1 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
-    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 8 nodes on m100\n",
+    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 2 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
+    "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 8 nodes on m100\n",
     "    inp.set_scalar_variables(X_and_IO_ROLEs='q.g.k.c.v',X_and_IO_CPU='1.1.1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    inp.set_scalar_variables(DIP_ROLEs='k.c.v',DIP_CPU='1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    \n",
@@ -2291,16 +2331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pp-G-kpoints_18', 'pp-K-kpoints_18', 'pp-G-kpoints_72', 'pp-K-kpoints_72']"
+       "['pp-G-kpoints_30', 'pp-K-kpoints_30']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,39 +2351,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'label': 'Dataset',\n",
+       " 'run_dir': 'GW_analysis/kpoints_30-nbnds_500',\n",
+       " 'num_tasks': 2,\n",
+       " 'verbose': True,\n",
+       " 'input': {'args': 'mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',\n",
+       "  'folder': 'GW_analysis/kpoints_30-nbnds_500',\n",
+       "  'filename': 'yambo.in',\n",
+       "  'arguments': ['rim_cut',\n",
+       "   'em1d',\n",
+       "   'gw0',\n",
+       "   'HF_and_locXC',\n",
+       "   'ppa',\n",
+       "   'ExtendOut',\n",
+       "   'RIM_W'],\n",
+       "  'variables': {'StdoHash': [40.0, ''],\n",
+       "   'Nelectro': [28.0, ''],\n",
+       "   'ElecTemp': [0.0, 'eV'],\n",
+       "   'BoseTemp': [-1.0, 'eV'],\n",
+       "   'OccTresh': [1e-05, ''],\n",
+       "   'NLogCPUs': [0.0, ''],\n",
+       "   'MEM_tresh': [51200.0, 'Kb'],\n",
+       "   'FFTGvecs': [23661.0, 'RL'],\n",
+       "   'X_and_IO_nCPU_LinAlg_INV': [-1.0, ''],\n",
+       "   'X_Threads': [0.0, ''],\n",
+       "   'DIP_Threads': [0.0, ''],\n",
+       "   'SE_Threads': [0.0, ''],\n",
+       "   'RandQpts': [5000000.0, ''],\n",
+       "   'RandGvec': [200, 'RL'],\n",
+       "   'IDEm1Ref': [0.0, ''],\n",
+       "   'CUTRadius': [0.0, ''],\n",
+       "   'CUTCylLen': [0.0, ''],\n",
+       "   'CUTwsGvec': [0.7, ''],\n",
+       "   'EXXRLvcs': [60.0, 'Ha'],\n",
+       "   'VXCRLvcs': [60.0, 'Ha'],\n",
+       "   'XfnQP_INTERP_NN': [1.0, ''],\n",
+       "   'XfnQP_INTERP_shells': [20.0, ''],\n",
+       "   'XfnQP_Wv_E': [0.0, 'eV'],\n",
+       "   'XfnQP_Wv_dos': [0.0, 'eV'],\n",
+       "   'XfnQP_Wc_E': [0.0, 'eV'],\n",
+       "   'XfnQP_Wc_dos': [0.0, 'eV'],\n",
+       "   'NGsBlkXp': [8.0, 'Ha'],\n",
+       "   'CGrdSpXp': [100.0, ''],\n",
+       "   'PPAPntXp': [27.21138, 'eV'],\n",
+       "   'XTermEn': [40.0, 'eV'],\n",
+       "   'GfnQP_INTERP_NN': [1.0, ''],\n",
+       "   'GfnQP_INTERP_shells': [20.0, ''],\n",
+       "   'GfnQP_Wv_E': [0.0, 'eV'],\n",
+       "   'GfnQP_Wv_dos': [0.0, 'eV'],\n",
+       "   'GfnQP_Wc_E': [0.0, 'eV'],\n",
+       "   'GfnQP_Wc_dos': [0.0, 'eV'],\n",
+       "   'BoseCut': [0.1, ''],\n",
+       "   'GDamping': [0.1, 'eV'],\n",
+       "   'dScStep': [0.1, 'eV'],\n",
+       "   'GTermEn': [40.81708, 'eV'],\n",
+       "   'GWoIter': [0.0, ''],\n",
+       "   'GWIter': [0.0, ''],\n",
+       "   'SCEtresh': [0.01, 'eV'],\n",
+       "   'DBsIOoff': 'none',\n",
+       "   'DBsFRAGpm': 'none',\n",
+       "   'PAR_def_mode': 'balanced',\n",
+       "   'CUTGeo': 'slab z',\n",
+       "   'Chimod': 'HARTREE',\n",
+       "   'ChiLinAlgMod': 'LIN_SYS',\n",
+       "   'XfnQPdb': 'none',\n",
+       "   'XfnQP_DbGd_INTERP_mode': 'NN',\n",
+       "   'XTermKind': 'none',\n",
+       "   'kind': 'BG',\n",
+       "   'GfnQPdb': 'none',\n",
+       "   'GfnQP_DbGd_INTERP_mode': 'NN',\n",
+       "   'GTermKind': 'none',\n",
+       "   'DysSolver': 'n',\n",
+       "   'XfnQP_Z': [(1+0j), ''],\n",
+       "   'GfnQP_Z': [(1+0j), ''],\n",
+       "   'Em1Anys': [[0.0, 0.0, 0.0], ''],\n",
+       "   'CUTBox': [[0.0, 0.0, 0.0], ''],\n",
+       "   'XfnQP_E': [[0.0, 1.0, 1.0], ''],\n",
+       "   'XfnQP_Wv': [[0.0, 0.0, 0.0], ''],\n",
+       "   'XfnQP_Wc': [[0.0, 0.0, 0.0], ''],\n",
+       "   'QpntsRXp': [[1, 91], ''],\n",
+       "   'BndsRnXp': [[1, 500], ''],\n",
+       "   'EhEngyXp': [['-1.000000', '-1.000000'], 'eV'],\n",
+       "   'LongDrXp': [[1.0, 0.0, 0.0], ''],\n",
+       "   'GfnQP_E': [[0.0, 1.0, 1.0], ''],\n",
+       "   'GfnQP_Wv': [[0.0, 0.0, 0.0], ''],\n",
+       "   'GfnQP_Wc': [[0.0, 0.0, 0.0], ''],\n",
+       "   'GbndRnge': [[1, 500], ''],\n",
+       "   'QPkrange': [[1, 1, 28, 29], ''],\n",
+       "   'QPerange': [[1, 91, 0.0, '-1.000000'], ''],\n",
+       "   'RandGvecW': [10, 'RL'],\n",
+       "   'SE_ROLEs': 'q.qp.b',\n",
+       "   'SE_CPU': '2.2.16',\n",
+       "   'X_and_IO_ROLEs': 'q.g.k.c.v',\n",
+       "   'X_and_IO_CPU': '1.1.1.16.4',\n",
+       "   'DIP_ROLEs': 'k.c.v',\n",
+       "   'DIP_CPU': '1.16.4'}},\n",
+       " 'jobname': ['pp-G-kpoints_30',\n",
+       "  'ndb_rim_cutoff',\n",
+       "  'ndb_hf_G',\n",
+       "  'ndb_em1d-ngsblkxp_8.0-bndsrnxp_500',\n",
+       "  'ndb_dipoles-nbnds_500'],\n",
+       " 'reformat': False,\n",
+       " 'name': 'pp-G-kpoints_30'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#study.runs[3]"
+    "study.runs[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0, 1, 2, 3] with the parallel task_groups [[0, 1], [2, 3]] \n",
+      "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
-      "Run the task [0, 1] \n",
-      "Skip the run of pp-G-kpoints_18Skip the run of\n",
-      " pp-K-kpoints_18\n",
-      "Task [0, 1] ended \n",
-      " \n",
-      "Run the task [2, 3] \n",
-      "Skip the run of pp-G-kpoints_72\n",
-      "Skip the run of pp-K-kpoints_72\n",
-      "Task [2, 3] ended \n",
-      " \n"
+      "Run the task [0] \n",
+      "run command: mpirun -np 64 yambo -F pp-G-kpoints_30.in -J \"pp-G-kpoints_30,ndb_rim_cutoff,ndb_hf_G,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-G-kpoints_30\n",
+      "slurm submit:  cd GW_analysis/kpoints_30-nbnds_500 ; sbatch job_pp-G-kpoints_30.sh\n",
+      "computation pp-G-kpoints_30 is running...\n"
      ]
     }
    ],
    "source": [
-    "results = study.run()"
+    "results = study.run(selection=[0])"
    ]
   },
   {
@@ -3014,7 +3160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3028,7 +3174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
