--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -68,48 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialize a Yambo calculator with scheduler slurm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'scheduler': 'slurm',\n",
-       " 'nodes': 2,\n",
-       " 'ntasks_per_node': 32,\n",
-       " 'cpus_per_task': 1,\n",
-       " 'omp_num_threads': 1,\n",
-       " 'gpus_per_node': None,\n",
-       " 'memory': '125000',\n",
-       " 'time': None,\n",
-       " 'partition': 'slownodes',\n",
-       " 'account': None,\n",
-       " 'qos': None,\n",
-       " 'map_by': None,\n",
-       " 'pe': 1,\n",
-       " 'rank_by': None,\n",
-       " 'executable': 'yambo',\n",
-       " 'skip': True,\n",
-       " 'clean_restart': True,\n",
-       " 'dry_run': False,\n",
-       " 'wait_end_run': True,\n",
-       " 'activate_BeeOND': True,\n",
-       " 'verbose': True,\n",
-       " 'fatlog': False}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -2245,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,19 +2215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16 4\n",
+      "16 2\n",
       "Initialize a Dataset with 2 parallel tasks\n",
-      "Executing command: cd DFT_analysis/kpoints_30-nbnds_500.save; p2y\n",
-      "Create folder path GW_analysis/kpoints_30-nbnds_500\n",
-      "Create a symlink of DFT_analysis/kpoints_30-nbnds_500.save/SAVE in GW_analysis/kpoints_30-nbnds_500\n",
-      "Build the r_setup in the run_dir path GW_analysis/kpoints_30-nbnds_500\n"
+      "SAVE folder DFT_analysis/kpoints_30-nbnds_500.save/SAVE already present. No operations performed.\n",
+      "SAVE folder already present in GW_analysis/kpoints_30-nbnds_500. No operations performed.\n"
      ]
     }
    ],
@@ -2294,9 +2253,9 @@
     "for k in kpoints:\n",
     "    source_dir = 'DFT_analysis/kpoints_%s-nbnds_500.save'%k\n",
     "    run_dir = 'GW_analysis/kpoints_%s-nbnds_500'%k\n",
-    "    Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
-    "    #Tools.init_yambo_run_dir(Tools.make_p2y(source_dir,\n",
-    "    #    p2y_command='mpirun -np 1 p2y'),run_dir=run_dir,yambo_command='mpirun -np 1 yambo')\n",
+    "    #Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
+    "    Tools.init_yambo_run_dir(Tools.make_p2y(source_dir,\n",
+    "        p2y_command='mpirun -np 1 p2y'),run_dir=run_dir,yambo_command='mpirun -np 1 yambo')\n",
     "\n",
     "    inp = I.YamboInput(args='mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',folder=run_dir)\n",
     "    inp.set_extendOut()\n",
@@ -2310,8 +2269,8 @@
     "    inp.set_bandRange(start_band,stop_band)\n",
     "    inp.set_array_variables(units=NGsBlkXp_units,NGsBlkXp=NGsBlkXp)\n",
     "    inp.set_array_variables(BndsRnXp=BndsRnXp,GbndRnge=GbndRnge)\n",
-    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 2 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
-    "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 8 nodes on m100\n",
+    "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 2 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
+    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 8 nodes on m100\n",
     "    inp.set_scalar_variables(X_and_IO_ROLEs='q.g.k.c.v',X_and_IO_CPU='1.1.1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    inp.set_scalar_variables(DIP_ROLEs='k.c.v',DIP_CPU='1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    \n",
@@ -2331,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2340,7 +2299,7 @@
        "['pp-G-kpoints_30', 'pp-K-kpoints_30']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2447,11 +2406,11 @@
        "   'QPerange': [[1, 91, 0.0, '-1.000000'], ''],\n",
        "   'RandGvecW': [10, 'RL'],\n",
        "   'SE_ROLEs': 'q.qp.b',\n",
-       "   'SE_CPU': '2.2.16',\n",
+       "   'SE_CPU': '2.1.16',\n",
        "   'X_and_IO_ROLEs': 'q.g.k.c.v',\n",
-       "   'X_and_IO_CPU': '1.1.1.16.4',\n",
+       "   'X_and_IO_CPU': '1.1.1.16.2',\n",
        "   'DIP_ROLEs': 'k.c.v',\n",
-       "   'DIP_CPU': '1.16.4'}},\n",
+       "   'DIP_CPU': '1.16.2'}},\n",
        " 'jobname': ['pp-G-kpoints_30',\n",
        "  'ndb_rim_cutoff',\n",
        "  'ndb_hf_G',\n",
@@ -2461,7 +2420,7 @@
        " 'name': 'pp-G-kpoints_30'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2482,9 +2441,10 @@
       "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
       "Run the task [0] \n",
-      "run command: mpirun -np 64 yambo -F pp-G-kpoints_30.in -J \"pp-G-kpoints_30,ndb_rim_cutoff,ndb_hf_G,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-G-kpoints_30\n",
+      "run command: mpirun -np 32 --map-by socket:PE=8 --rank-by core yambo -F pp-G-kpoints_30.in -J \"pp-G-kpoints_30,ndb_rim_cutoff,ndb_hf_G,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-G-kpoints_30\n",
       "slurm submit:  cd GW_analysis/kpoints_30-nbnds_500 ; sbatch job_pp-G-kpoints_30.sh\n",
-      "computation pp-G-kpoints_30 is running...\n"
+      "computation pp-G-kpoints_30 is running...\n",
+      "Submitted batch job 8933139\n"
      ]
     }
    ],
@@ -3160,7 +3120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3174,7 +3134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
