--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -187,7 +187,7 @@
     "\n",
     "rr = C.RunRules(scheduler='slurm',partition='m100_usr_prod',\n",
     "                account='IscrC_PrExIn',\n",
-    "                memory='120GB',time='23:59:00',\n",
+    "                memory='240GB',time='23:59:00',\n",
     "                nodes=nodes,ntasks_per_node=ntasks_per_node,\n",
     "                cpus_per_task=cpus_per_task,omp_num_threads=omp_num_threads,\n",
     "                gpus_per_node=gpus_per_node,pe=pe,\n",
@@ -2927,7 +2927,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2941,7 +2941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
