--- a/DFT_Analysis.ipynb
+++ b/DFT_Analysis.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "84270c16-cb9a-4bee-b5a2-2609bcfe1519",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ac3e9f3e-3fe0-404c-b4ec-8fa3024b4480",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "c8c748f0-f274-49e3-afa4-89894fba211b",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a2a1644d-73af-4f8e-9149-9ff58de178cc",
    "metadata": {},
    "outputs": [],
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "cdff6620-8027-4fb7-8e48-449445e5d4b3",
    "metadata": {},
    "outputs": [],
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "71b216b9-f925-4ffb-9771-5c00137798ba",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "6c4d5190-4090-415c-8b7a-274b6202a9a8",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "(array([-1. , -0.5,  0. ,  0.5,  1. ]), array([-1. , -0.5,  0. ,  0.5,  1. ]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "e4770980-aff6-40a2-9a9a-f567600114b3",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "037f02e2-d36e-43f1-8816-207de85416ff",
    "metadata": {},
    "outputs": [
@@ -847,37 +847,37 @@
       "Run the selection [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24] with the parallel task_groups [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [10, 11, 12, 13, 14, 15, 16, 17, 18, 19], [20, 21, 22, 23, 24]] \n",
       "\n",
       "Run the task [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
-      "Skip the run of alat_-1.0-delta_-0.5\n",
-      "Skip the run of alat_-0.5-delta_-0.5Skip the run ofSkip the run ofSkip the run of\n",
-      "Skip the run of  Skip the run of alat_-1.0-delta_0.5alat_-1.0-delta_1.0 \n",
-      " \n",
-      "alat_-1.0-delta_-1.0alat_-1.0-delta_0.0\n",
+      "Skip the run of Skip the run ofalat_-0.5-delta_-0.5Skip the run ofSkip the run ofSkip the run ofSkip the run of\n",
+      " Skip the run of    alat_-0.5-delta_0.0alat_-1.0-delta_-0.5alat_-1.0-delta_0.0Skip the run ofalat_-1.0-delta_1.0alat_-1.0-delta_0.5 \n",
+      "Skip the run of\n",
       "\n",
-      "alat_-0.5-delta_-1.0\n",
-      "Skip the run of alat_-0.5-delta_0.0\n",
-      "Skip the run of alat_-0.5-delta_0.5\n",
+      "\n",
+      "\n",
+      "alat_-0.5-delta_0.5 \n",
+      "alat_-1.0-delta_-1.0\n",
+      " alat_-0.5-delta_-1.0\n",
       "Skip the run of alat_-0.5-delta_1.0\n",
       "Task [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] ended \n",
       " \n",
       "Run the task [10, 11, 12, 13, 14, 15, 16, 17, 18, 19] \n",
-      "Skip the run of Skip the run ofalat_0.0-delta_-1.0\n",
-      " alat_0.0-delta_-0.5\n",
-      "Skip the run of alat_0.0-delta_0.0\n",
-      "Skip the run of alat_0.0-delta_1.0\n",
-      "Skip the run of alat_0.5-delta_-1.0Skip the run of\n",
-      " Skip the run ofalat_0.5-delta_-0.5\n",
-      " Skip the run ofalat_0.0-delta_0.5 \n",
-      "alat_0.5-delta_0.0\n",
+      "Skip the run of alat_0.0-delta_-1.0\n",
+      "Skip the run of alat_0.0-delta_-0.5Skip the run of\n",
+      "Skip the run of  alat_0.0-delta_0.0alat_0.0-delta_1.0Skip the run of\n",
+      "\n",
+      " alat_0.5-delta_-1.0\n",
+      "Skip the run ofSkip the run of  alat_0.5-delta_-0.5alat_0.0-delta_0.5\n",
+      "\n",
+      "Skip the run of alat_0.5-delta_0.0\n",
       "Skip the run of alat_0.5-delta_0.5\n",
       "Skip the run of alat_0.5-delta_1.0\n",
       "Task [10, 11, 12, 13, 14, 15, 16, 17, 18, 19] ended \n",
       " \n",
       "Run the task [20, 21, 22, 23, 24] \n",
       "Skip the run of alat_1.0-delta_-1.0\n",
-      "Skip the run of Skip the run ofalat_1.0-delta_-0.5Skip the run of \n",
-      " alat_1.0-delta_0.0alat_1.0-delta_0.5\n",
+      "Skip the run ofSkip the run of  alat_1.0-delta_0.0alat_1.0-delta_-0.5\n",
       "\n",
-      "Skip the run of alat_1.0-delta_1.0\n",
+      "Skip the run of Skip the run ofalat_1.0-delta_0.5 \n",
+      "alat_1.0-delta_1.0\n",
       "Task [20, 21, 22, 23, 24] ended \n",
       " \n"
      ]
@@ -889,17 +889,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "9361d214-0a76-4cc1-9e8d-1ae76f3d5ee3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0c51ad48d0>"
+       "<matplotlib.legend.Legend at 0x7fe5749d3e10>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -936,17 +936,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "2072b867-3963-4a06-be01-c606b8f0521a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f0c51a96dd8>]"
+       "[<matplotlib.lines.Line2D at 0x7fe5ad72f080>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "id": "75cc84eb-1393-41f2-83cf-4d4a6b9a5fb2",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
        "8.836410180981327"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f0c51623208>]"
+       "[<matplotlib.lines.Line2D at 0x7fe5960d2d30>]"
       ]
      },
      "execution_count": 25,
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "734342fb-8233-470d-a761-f79236df8ffd",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1370,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "18d47ce8-8a8d-4e0e-a163-ee5e7cf1e5fb",
    "metadata": {},
    "outputs": [],
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "f2e09439-c46a-4fc7-ba98-3036425f3086",
    "metadata": {},
    "outputs": [
@@ -1564,7 +1564,7 @@
        " [0.0, 0.0, 0.0, 0]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "ff76a885-7e4f-4945-b537-6d922d737838",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1613,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "e03a3d6f-4c08-4a94-8ceb-ff88e001adf2",
    "metadata": {},
    "outputs": [
@@ -1635,15 +1635,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "delete job_out script: DFT_analysis/job_bands.out\n",
-      "delete log file: DFT_analysis/bands.log\n",
-      "delete xml file: /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/bands.xml\n",
-      "delete folder: /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/bands.save\n",
-      "copy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/bands.save\n",
-      "run command: mpirun -np 16 pw.x -inp bands.in > bands.log\n",
-      "slurm submit:  cd DFT_analysis ; sbatch job_bands.sh\n",
-      "computation bands is running...\n",
-      "computation bands ended\n"
+      "Skip the run of bands\n",
+      "The folder /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/bands.save already exists. Source_dir DFT_analysis/gs_converged.save not copied\n"
      ]
     }
    ],
@@ -1661,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "7dfc12fd-3a47-4589-a3f3-7f307ae4e2ba",
    "metadata": {},
    "outputs": [],
@@ -1671,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "606fe57e-b265-494f-83f4-00d9939234bc",
    "metadata": {},
    "outputs": [
@@ -1682,7 +1675,7 @@
        " [0.0, 1.577350265701805, 0.9106835999999988, 0.57735027])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "72e2728c-59e5-4b50-99a9-7fb77129709b",
    "metadata": {},
    "outputs": [
@@ -1733,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "7a2dedbd-9ee5-4727-901d-4a37838dd1f1",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1736,7 @@
        "(-1.0, 1.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1796,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "2d482de1-2847-41af-846b-b3bd71e86147",
    "metadata": {},
    "outputs": [],
@@ -1810,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "5872c364-96ad-4047-a87c-f372c8551916",
    "metadata": {},
    "outputs": [
@@ -1819,7 +1812,7 @@
       "text/plain": [
        "{'control': {'calculation': \"'nscf'\",\n",
        "  'verbosity': \"'high'\",\n",
-       "  'prefix': \"'pwscf'\",\n",
+       "  'prefix': \"'bands'\",\n",
        "  'outdir': \"'./'\",\n",
        "  'pseudo_dir': \"'../pseudos'\"},\n",
        " 'system': {'force_symmorphic': '.true.',\n",
@@ -1839,11 +1832,15 @@
        " 'atomic_positions': {'type': 'alat',\n",
        "  'values': [['Sn', array([0.        , 0.57735027, 0.09148726])],\n",
        "   ['Sn', array([ 0.5       ,  0.28867513, -0.09148726])]]},\n",
-       " 'kpoints': {'type': 'automatic', 'values': ([15, 15, 1], [0.0, 0.0, 0.0])},\n",
+       " 'kpoints': {'type': 'tpiba_b',\n",
+       "  'values': [[0.0, 0.0, 0.0, 60],\n",
+       "   [0.0, 0.5773502691896258, 0.0, 60],\n",
+       "   [0.3333333333333333, 0.5773502691896258, 0.0, 60],\n",
+       "   [0.0, 0.0, 0.0, 0]]},\n",
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "6158de2a-15db-446f-9a9f-bcdc184a4c70",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "e38422cb-1e04-46cf-b202-2829c55938fa",
    "metadata": {},
    "outputs": [
@@ -1891,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "cef5f9a1-ea58-4b33-b719-2fbfca2da5c0",
    "metadata": {},
    "outputs": [
@@ -1930,7 +1927,7 @@
        " 'name': 'kpoints_30-nbnds_500'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "2936d7bf-43ae-4b8d-9cf0-99382f9fe33f",
    "metadata": {},
    "outputs": [
@@ -1952,15 +1949,50 @@
       "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
       "Run the task [0] \n",
-      "copy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_30-nbnds_500.save\n",
-      "run command: mpirun -np 16 pw.x -inp kpoints_30-nbnds_500.in > kpoints_30-nbnds_500.log\n",
-      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_30-nbnds_500.sh\n",
-      "computation kpoints_30-nbnds_500 is running...\n"
+      "Skip the run of kpoints_30-nbnds_500\n",
+      "The folder /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_30-nbnds_500.save already exists. Source_dir DFT_analysis/gs_converged.save not copied\n",
+      "Task [0] ended \n",
+      " \n"
      ]
     }
    ],
    "source": [
     "results = study.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f8aa9450-b099-425d-a330-757c7e80bc4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indirect gap system\n",
+      "===================\n",
+      "Gap : 0.06293570107691293 eV\n",
+      "Direct gap : 0.07722606063751525 eV\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'gap': 0.06293570107691293,\n",
+       " 'direct_gap': 0.07722606063751525,\n",
+       " 'position_cbm': 90,\n",
+       " 'positon_vbm': 0,\n",
+       " 'positon_direct_gap': 90}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0].get_gap()"
    ]
   },
   {
