--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -1757,9 +1757,9 @@
     "We observe that 500 bands are sufficient to provide convergence at K whereas the convergence of the gap at $\\Gamma$\n",
     "requires more bands. \n",
     "\n",
-    "__Moreover, as pointed out in the literature, an ulterior convergence test on the NGsBlkXp parameter should be performed\n",
+    "Moreover, as pointed out in the literature, an ulterior convergence test on the NGsBlkXp parameter should be performed\n",
     "since this parameter is connected to the BndsRnXp so the convergence test previously performed should not be \n",
-    "completely reliable. We will perform this analysis afterwards.__"
+    "completely reliable. We will perform this analysis afterwards."
    ]
   },
   {
@@ -2927,7 +2927,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2941,7 +2941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
