--- a/DFT_Analysis.ipynb
+++ b/DFT_Analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "7f849d39-dc30-4225-abf0-ef50b8eced86",
    "metadata": {},
    "outputs": [
@@ -68,8 +68,8 @@
        " 'omp_num_threads': 2,\n",
        " 'gpus_per_node': None,\n",
        " 'memory': '125000',\n",
-       " 'time': '11:59:00',\n",
-       " 'partition': 'all12h',\n",
+       " 'time': None,\n",
+       " 'partition': 'fastnodes',\n",
        " 'account': None,\n",
        " 'qos': None,\n",
        " 'map_by': None,\n",
@@ -84,7 +84,7 @@
        " 'verbose': True}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,9 +100,8 @@
     "\n",
     "ntasks = nodes*ntasks_per_node\n",
     "\n",
-    "rr = C.RunRules(scheduler='slurm',partition='all12h',\n",
-    "                memory='125000',time='11:59:00',\n",
-    "                nodes=nodes,ntasks_per_node=ntasks_per_node,\n",
+    "rr = C.RunRules(scheduler='slurm',partition='fastnodes',\n",
+    "                memory='125000',nodes=nodes,ntasks_per_node=ntasks_per_node,\n",
     "                cpus_per_task=cpus_per_task,\n",
     "                omp_num_threads=omp_num_threads)\n",
     "code = C.QeCalculator(rr,activate_BeeOND=True) #,skip=False,clean_restart=False\n",
@@ -1337,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "734342fb-8233-470d-a761-f79236df8ffd",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1369,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "2d482de1-2847-41af-846b-b3bd71e86147",
    "metadata": {},
    "outputs": [],
@@ -1803,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "5872c364-96ad-4047-a87c-f372c8551916",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1811,7 @@
       "text/plain": [
        "{'control': {'calculation': \"'nscf'\",\n",
        "  'verbosity': \"'high'\",\n",
-       "  'prefix': \"'bands'\",\n",
+       "  'prefix': \"'kpoints_60-nbnds_500'\",\n",
        "  'outdir': \"'./'\",\n",
        "  'pseudo_dir': \"'../pseudos'\"},\n",
        " 'system': {'force_symmorphic': '.true.',\n",
@@ -1832,15 +1831,11 @@
        " 'atomic_positions': {'type': 'alat',\n",
        "  'values': [['Sn', array([0.        , 0.57735027, 0.09148726])],\n",
        "   ['Sn', array([ 0.5       ,  0.28867513, -0.09148726])]]},\n",
-       " 'kpoints': {'type': 'tpiba_b',\n",
-       "  'values': [[0.0, 0.0, 0.0, 60],\n",
-       "   [0.0, 0.5773502691896258, 0.0, 60],\n",
-       "   [0.3333333333333333, 0.5773502691896258, 0.0, 60],\n",
-       "   [0.0, 0.0, 0.0, 0]]},\n",
+       " 'kpoints': {'type': 'automatic', 'values': ([60, 60, 1], [0.0, 0.0, 0.0])},\n",
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1853,17 +1848,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "6158de2a-15db-446f-9a9f-bcdc184a4c70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvalues = [30] #[18,30,42,60,72]"
+    "kvalues = [42,60] #[18,30,42,60,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "e38422cb-1e04-46cf-b202-2829c55938fa",
    "metadata": {},
    "outputs": [
@@ -1888,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "cef5f9a1-ea58-4b33-b719-2fbfca2da5c0",
    "metadata": {},
    "outputs": [
@@ -1901,7 +1896,7 @@
        " 'verbose': True,\n",
        " 'input': {'control': {'calculation': \"'nscf'\",\n",
        "   'verbosity': \"'high'\",\n",
-       "   'prefix': \"'kpoints_30-nbnds_500'\",\n",
+       "   'prefix': \"'kpoints_60-nbnds_500'\",\n",
        "   'outdir': \"'./'\",\n",
        "   'pseudo_dir': \"'../pseudos'\"},\n",
        "  'system': {'force_symmorphic': '.true.',\n",
@@ -1921,24 +1916,24 @@
        "  'atomic_positions': {'type': 'alat',\n",
        "   'values': [['Sn', array([0.        , 0.57735027, 0.09148726])],\n",
        "    ['Sn', array([ 0.5       ,  0.28867513, -0.09148726])]]},\n",
-       "  'kpoints': {'type': 'automatic', 'values': ([30, 30, 1], [0.0, 0.0, 0.0])},\n",
+       "  'kpoints': {'type': 'automatic', 'values': ([60, 60, 1], [0.0, 0.0, 0.0])},\n",
        "  'cell_parameters': {}},\n",
        " 'source_dir': 'DFT_analysis/gs_converged.save',\n",
-       " 'name': 'kpoints_30-nbnds_500'}"
+       " 'name': 'kpoints_60-nbnds_500'}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "study.runs[0]"
+    "study.runs[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "2936d7bf-43ae-4b8d-9cf0-99382f9fe33f",
    "metadata": {},
    "outputs": [
@@ -1946,13 +1941,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0] with the parallel task_groups [[0]] \n",
+      "Run the selection [0, 1] with the parallel task_groups [[0, 1]] \n",
       "\n",
-      "Run the task [0] \n",
-      "Skip the run of kpoints_30-nbnds_500\n",
-      "The folder /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_30-nbnds_500.save already exists. Source_dir DFT_analysis/gs_converged.save not copied\n",
-      "Task [0] ended \n",
-      " \n"
+      "Run the task [0, 1] \n",
+      "delete job_out script: DFT_analysis/job_kpoints_42-nbnds_500.out\n",
+      "delete job_out script: DFT_analysis/job_kpoints_60-nbnds_500.out\n",
+      "delete log file: DFT_analysis/kpoints_42-nbnds_500.logdelete log file:\n",
+      " DFT_analysis/kpoints_60-nbnds_500.log\n",
+      "delete folder: delete folder:/work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_42-nbnds_500.save \n",
+      "/work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_60-nbnds_500.save\n",
+      "copy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_42-nbnds_500.savecopy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis/kpoints_60-nbnds_500.save\n",
+      "\n",
+      "run command: mpirun -np 16 pw.x -inp kpoints_60-nbnds_500.in > kpoints_60-nbnds_500.logrun command: mpirun -np 16 pw.x -inp kpoints_42-nbnds_500.in > kpoints_42-nbnds_500.log\n",
+      "\n",
+      "slurm submit: slurm submit:   cd DFT_analysis ; sbatch job_kpoints_60-nbnds_500.shcd DFT_analysis ; sbatch job_kpoints_42-nbnds_500.sh\n",
+      "\n",
+      "computation kpoints_60-nbnds_500 is running...computation kpoints_42-nbnds_500 is running...\n",
+      "\n"
      ]
     }
    ],
